feat: records search implementation
